# sinistar

./: .gitignore  CMakeLists.txt  Makefile  README.md
assets/config/: game.cfg  zones.cfg
assets/sprites/: palette.txt
docs/: rom_analysis.md
src/: assets.h  config.h  cpu6809.h  game.h  main.cpp  williams.h
tools/: extract_assets.cpp
